2002-01-23  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* doc/C/libgda-sections.txt:
	* doc/C/tmpl/gda-command.sgml:
	* doc/C/tmpl/gda-connection.sgml:
	* doc/C/tmpl/gda-recordset.sgml:
	* doc/C/tmpl/gda-report-datasource.sgml:
	* doc/C/tmpl/gda-row.sgml:
	* doc/C/tmpl/gda-server-recordset-model.sgml:
	* doc/C/tmpl/gda-server-recordset.sgml:
	* doc/C/tmpl/gda-xql-utils.sgml:
	* libgda/gda-recordset.c: added documentation for
	gda_recordset_get_command_t*().

2002-01-23  Rodrigo Moya <rodrigo@gnome-db.org>

	* data/gda-xml-query.dtd:
	* data/gda-xml-query.xsl: added from stable branch

2002-01-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/sqlite/*: moved the default provider to this new
	directory, as the SQLite provider is just one more provider.

	* configure.in:
	* providers/Makefile.am: enabled new sqlite directory.

	* libgda/gda-recordset.c (gda_recordset_finalize): check for
	object type before continuing.

2002-01-22  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* idl/GNOME_Database.idl: moved declarations of Command* before
	Recordset. Added getCommandText() and getCommandType() to the
	Recordset interface.

	* libgda/gda-recordset.[ch] (gda_recordset_command_type):
	(gda_recordset_command_text): new functions to retrieve the text and
	type of the query that generated the recordset.

	* libgda/gda-server-recordset.[ch] (impl_Recordset_getCommandText):
	(impl_Recordset_getCommandType): new functions.

	* providers/postgres/gda-postgres-provider.c (process_sql_commands):
	sets the command type and text for each recordset.

	* testing/models.c (display_recordset_data): display the type and text
	of the query. Now it works for postgres provider.

2002-01-21  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* idl/GNOME_Database.idl:
	* libgda/gda-connection.h:
	* providers/postgres/gda-postgres-provider.c:
	* testing/client.c: added new SCHEMA_INDEXES and support for it.

2002-01-20  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>
