@@ -22,49 +22,6 @@ providers.
 </para>
 
 
-<!-- ##### TYPEDEF GdaCommandOptions ##### -->
-<para>
-And OR'ed combination of GDA_COMMAND_OPTIONS_* values.
-
-</para>
-
-
-<!-- ##### MACRO GDA_COMMAND_OPTION_IGNORE_ERRORS ##### -->
-<para>
-Instruct the provider to ignore errors in the execution of commands and 
-continue processing. Conflicts with #GDA_COMMAND_OPTION_STOP_ON_ERRORS.
-
-</para>
-
-
-
-<!-- ##### MACRO GDA_COMMAND_OPTION_STOP_ON_ERRORS ##### -->
-<para>
-Instruct the provider to stop in case of error when executing commands. The
-provider should add an error to the connection and return NULL.  Conflicts
-with #GDA_COMMAND_OPTION_IGNORE_ERRORS.
-
-</para>
-
-
-
-<!-- ##### MACRO GDA_COMMAND_OPTION_BAD_OPTION ##### -->
-<para>
-Returned value for #gda_command_get_option if the argument is NULL.
-
-</para>
-
-
-
-<!-- ##### MACRO GDA_COMMAND_DEFAULT_OPTION ##### -->
-<para>
-This value is the one set by default. Currently is equal to
-#GDA_COMMAND_OPTION_STOP_ON_ERRORS.
-
-</para>
-
-
-
 <!-- ##### ENUM GdaCommandType ##### -->
 <para>
 
@@ -85,9 +42,9 @@ table names.
 
 @text: 
 @type: 
-@options: 
 @Returns: 
 <!-- # Unused Parameters # -->
+@options: 
 @option: 
 
 
@@ -133,23 +90,5 @@ table names.
 
 @cmd: 
 @type: 
-
-
-<!-- ##### FUNCTION gda_command_get_options ##### -->
-<para>
-
-</para>
-
-@cmd: 
-@Returns: 
-
-
-<!-- ##### FUNCTION gda_command_set_options ##### -->
-<para>
-
-</para>
-
-@cmd: 
-@options: 
 
 
