@@ -176,7 +176,6 @@ GdaConnection
 
 </para>
 
-@GDA_CONNECTION_SCHEMA_INDEXES: 
 @GDA_CONNECTION_SCHEMA_PROCEDURES: 
 @GDA_CONNECTION_SCHEMA_TABLES: 
 @GDA_CONNECTION_SCHEMA_TYPES: 
