@@ -1,3 +1,7 @@
+2002-01-23  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* libgda/gda-util.c (gda_file_load): implemented
+
 2002-01-23  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>
 
 	* doc/C/libgda-sections.txt:
